<resources>
    <string name="a">无法连接到网络，请检查网络配置</string>
    <string name="b">确定</string>
    <string name="c">抱歉，该视频不适合在此设备上播放。</string>
    <string name="d">无法播放此视频。</string>
    <string name="e">视频问题</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="a6">验证码错误，请重新输入</string>
    <string name="a7">添加</string>
    <string name="a8">同意</string>
    <string name="a9">同意并发送</string>
    <string name="a_">已同意该申请</string>
    <string name="aa">%s已同意该申请</string>
    <string name="ab">已同意该邀请</string>
    <string name="ac">%s已同意该邀请</string>
    <string name="ad">All Media</string>
    <string name="ae">已关注</string>
    <string name="ag">com.hengye.share.Launcher</string>
    <string name="app_name">Share</string>
    <string name="ai">Share</string>
    <string name="aj">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ak">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="al">com.hengye.appbase.ui.support.FlingBehavior</string>
    <string name="am">加关注</string>
    <string name="an">Audio</string>
    <string name="ao">back</string>
    <string name="ap">权威</string>
    <string name="aq">原创</string>
    <string name="ar">独家</string>
    <string name="as">首发</string>
    <string name="at">com.hengye.share.ui.widget.behavior.BottomNavigationBehavior</string>
    <string name="au">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="av">Expand halfway</string>
    <string name="aw">Apply(%1$d)</string>
    <string name="ax">Apply</string>
    <string name="ay">Back</string>
    <string name="az">OK</string>
    <string name="b0">Original</string>
    <string name="b1">Preview</string>
    <string name="b2">Sure(%1$d)</string>
    <string name="b3">Sure</string>
    <string name="b4">取消</string>
    <string name="b5">取消勾选</string>
    <string name="b6">取消关注</string>
    <string name="b7">取消关注失败</string>
    <string name="b8">Cancel</string>
    <string name="b9">取消快转</string>
    <string name="b_">确认要取消快转这条微博吗？</string>
    <string name="ba">取消屏蔽Ta的微博</string>
    <string name="bb">取消</string>
    <string name="bc">取消</string>
    <string name="bd">暂不分组</string>
    <string name="be">取消邀请</string>
    <string name="bf">确定要放弃分享照片吗？</string>
    <string name="bg">取消</string>
    <string name="bh">取消</string>
    <string name="bi">加入分组</string>
    <string name="bj">恢复好友</string>
    <string name="bk">操作成功</string>
    <string name="bl">已加入该组</string>
    <string name="bm">取消</string>
    <string name="bn">确定</string>
    <string name="bo">解除屏蔽</string>
    <string name="bp">解除屏蔽失败</string>
    <string name="bq">已解除屏蔽</string>
    <string name="br">取消</string>
    <string name="bs">取消置顶</string>
    <string name="bt">确定取消关注新浪新闻吗</string>
    <string name="bu">取消置顶微博</string>
    <string name="bv">取消置顶失败</string>
    <string name="bw">已取消置顶</string>
    <string name="bx">%d图</string>
    <string name="by">换一张</string>
    <string name="bz">收到未读消息后的通知提示</string>
    <string name="c0">新消息通知</string>
    <string name="c1">用于显示正在播放的音乐</string>
    <string name="c2">显示播放的音乐</string>
    <string name="c3">发送微博成功或者失败的通知提示</string>
    <string name="c4">微博发送结果通知</string>
    <string name="c5">用于管理不太重要的通知提示</string>
    <string name="c6">其他通知</string>
    <string name="c7">Characters entered %1$d of %2$d</string>
    <string name="c8">Character limit exceeded %1$d of %2$d</string>
    <string name="c9">%1$d/%2$d</string>
    <string name="c_">群二维码</string>
    <string name="ca">置顶聊天</string>
    <string name="cb">屏蔽消息</string>
    <string name="cc">设置</string>
    <string name="cd">聊天</string>
    <string name="ce">Chip text</string>
    <string name="ch">全部已读</string>
    <string name="ci">清空</string>
    <string name="cj">确定清空全部消息吗？</string>
    <string name="ck">清空全部消息</string>
    <string name="cl">清空所有群聊消息</string>
    <string name="cm">清空所有私信</string>
    <string name="cn">清空新浪新闻</string>
    <string name="co">仅清空未关注人私信</string>
    <string name="cp">清理</string>
    <string name="cq">是否要清空草稿箱？</string>
    <string name="cr">确定清空粉丝群消息？</string>
    <string name="cs">确定清空所有群聊消息吗？</string>
    <string name="ct">确定清空群通知消息?</string>
    <string name="cu">清空失败</string>
    <string name="cv">正在清空</string>
    <string name="f2">排序</string>
    <string name="qn">调整字体</string>
    <string name="s4">生成长图</string>
    <string name="vq">在浏览器中打开</string>
    <string name="vr">在微博中打开</string>
    <string name="vw">定时发送</string>
    <string name="vx">取消定时</string>
    <string name="w9">图片水印</string>
    <string name="x_">分享</string>
    <string name="xh">分享链接</string>
    <string name="y2">屏蔽</string>
    <string name="y9">签到</string>
    <string name="y_">收藏</string>
    <string name="yp">评论管理</string>
    <string name="yq">复制</string>
    <string name="yt">删除</string>
    <string name="yz">快转</string>
    <string name="z2">编辑历史</string>
    <string name="z6">新鲜事投稿</string>
    <string name="zd">设置抽奖</string>
    <string name="zx">点评</string>
    <string name="a00">投诉</string>
    <string name="a0g">置顶微博</string>
    <string name="a0l">屏蔽此人</string>
    <string name="a0q">设置分享范围</string>
    <string name="a1s">复制链接</string>
    <string name="aae">管理</string>
    <string name="aah">移除</string>
    <string name="aan">按活跃度</string>
    <string name="aao">按字母</string>
    <string name="aap">按加群时间</string>
    <string name="aaq">按最后发言时间</string>
    <string name="ao4">更多</string>
    <string name="aol">刷新</string>
    <string name="ap1">发送选项</string>
    <string name="aqu">微博尾巴</string>
    <string name="art">关于</string>
    <string name="aru">Share高级版</string>
    <string name="arv">基本设置</string>
    <string name="arx">流量控制</string>
    <string name="ary">布局样式</string>
    <string name="arz">通知设置</string>
    <string name="as0">隐私设置</string>
    <string name="as1">阅读习惯</string>
    <string name="as3">分享</string>
    <string name="as4">Share实验室</string>
    <string name="as5">音效管理</string>
    <string name="as6">微博样式</string>
    <string name="as9">一键拉黑</string>
    <string name="asa">添加到桌面</string>
    <string name="asb">移除粉丝</string>
    <string name="asd">编辑分组</string>
    <string name="ase">编辑资料</string>
    <string name="asg">举报用户</string>
    <string name="ash">搜索微博</string>
    <string name="asi">分享用户</string>
    <string name="atk">选择账号</string>
    <string name="ats">自动播放视频和动图</string>
    <string name="atu">调整头像样式</string>
    <string name="aty">检查更新</string>
    <string name="atz">清除图片缓存</string>
    <string name="au0">点击图片返回</string>
    <string name="au4">常规设置</string>
    <string name="au6">使用CustomTabs</string>
    <string name="au7">当使用外部浏览器打开链接时，顶部标题背景颜色使用应用的主题色，需浏览器支持(Chrome)</string>
    <string name="au_">消息页屏蔽订阅类私信</string>
    <string name="aua">订阅类私信管理</string>
    <string name="aud">捐赠开发者</string>
    <string name="aue">Wi-Fi下自动下载Share安装包</string>
    <string name="auf">拖拽图片返回</string>
    <string name="aug">侧栏封面</string>
    <string name="aui">侧栏菜单调整</string>
    <string name="auk">首页FAB按钮</string>
    <string name="aul">开启快速拖动</string>
    <string name="aum">浏览首页微博时可用拖动条快速拖动</string>
    <string name="aun">沉浸式状态栏</string>
    <string name="auo">部分手机可能暂不支持关闭沉浸式状态栏</string>
    <string name="aut">微博字体大小调整</string>
    <string name="auu">隐藏热门搜索</string>
    <string name="auv">隐藏热门板块</string>
    <string name="auy">隐藏经常访问</string>
    <string name="auz">隐藏分享菜单的好友列表</string>
    <string name="av0">历史版本</string>
    <string name="av1">首页按返回键退出</string>
    <string name="av2">退出应用，不在后台运行</string>
    <string name="av5">应用图标</string>
    <string name="av8">使用内置浏览器</string>
    <string name="av9">语言</string>
    <string name="avc">首页加载微博时的条数</string>
    <string name="avd">滑动时隐藏导航栏</string>
    <string name="ave">导航栏模式</string>
    <string name="avf">虚拟导航栏跟随主题颜色</string>
    <string name="avn">开启通知提醒</string>
    <string name="avo">屏幕方向</string>
    <string name="avp">其他</string>
    <string name="avt">图片</string>
    <string name="avu">微博图片加载质量</string>
    <string name="avv">保存图片时默认保存原图</string>
    <string name="avw">图片上传的默认质量</string>
    <string name="avy">预读模式</string>
    <string name="avz">当内容快浏览到尽头时提前加载避免等待</string>
    <string name="aw1">给我评分</string>
    <string name="aw4">提醒设置</string>
    <string name="aw5">呼吸灯提醒</string>
    <string name="aw6">需手机支持</string>
    <string name="aw9">振动提醒</string>
    <string name="awb">通知提醒类型</string>
    <string name="awf">铃声设置</string>
    <string name="awg">音效类型</string>
    <string name="awi">防止重复保存图片</string>
    <string name="awk">默认多次保存会出现多张重复图片，图片文件名会以当前时间命名</string>
    <string name="awl">图片保存路径</string>
    <string name="awm">视频保存路径</string>
    <string name="awq">显示设置</string>
    <string name="awr">显示评论图片</string>
    <string name="aws">首页抽屉菜单从左侧展开</string>
    <string name="awt">FAB(右下按钮)左侧显示</string>
    <string name="awx">不显示头像</string>
    <string name="awy">关闭可以节省流量</string>
    <string name="ax1">微博使用卡片风格</string>
    <string name="ax2">显示头像框和卡片背景</string>
    <string name="ax3">使用卡片风格的分割线</string>
    <string name="ax4">同时显示微博收藏按钮</string>
    <string name="ax5">微博显示选项按钮</string>
    <string name="ax6">微博内容下方显示转发、评论、赞等按钮</string>
    <string name="ax7">微博左侧保留空白空间</string>
    <string name="ax8">悬浮窗视频关闭按钮左侧显示</string>
    <string name="ax9">静音模式</string>
    <string name="ax_">关闭一切提醒音效</string>
    <string name="axa">微博字体行距调整</string>
    <string name="axb">特别关注微博提醒</string>
    <string name="axf">微博名字后面显示图标</string>
    <string name="axg">微博名字加粗</string>
    <string name="axh">如果手机字体不支持加粗时请关闭该选项</string>
    <string name="axi">微博名字跟随主题颜色</string>
    <string name="axj">同时显示备注和名字</string>
    <string name="axk">二级页面滑动后退</string>
    <string name="axm">滑动时不隐藏标题</string>
    <string name="axo">数字红点提醒类型</string>
    <string name="axp">用户协议和隐私政策</string>
    <string name="axq">使用手册</string>
    <string name="axr">版本号</string>
    <string name="axs">振动设置</string>
    <string name="axt">振动反馈</string>
    <string name="axu">内容发送成功后振动反馈</string>
    <string name="axv">开启振动</string>
    <string name="axz">视频播放优先质量</string>
    <string name="ay3">编辑微博</string>
    <string name="b35">投票</string>
    <string name="b44">选项</string>
</resources>